# learn_sqlalchemy

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  test_data.sql
src/: config.py  database.py  main.py  models.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 46a52d6c4630_migration_2.py  f111dde6790b_.py
src/queries/: core.py  orm.py
